# openapi.yml
@@ -124,12 +124,29 @@ paths:
             type: string
       responses:
         "200":
-          description: list of invitations
+          description: text of the groups terms in markdown
           content:
             application/json:
               schema:
                 type: string
                 example: some terms
+        "400":
+          description: invalid input, invalid object
+        "403":
+          description: forbidden
+    delete:
+      summary: delete group terms
+      description: delete the terms of condition for a group
+      parameters:
+        - in: path
+          name: groupName
+          description: pass in the group name to interact with
+          required: true
+          schema:
+            type: string
+      responses:
+        "201":
+          description: terms deleted
         "400":
           description: invalid input, invalid object
         "403":
